refactor: change text result button

--- a/credit-calculator/src/app/calcular-parcelas/calcular-parcelas.component.html
+++ b/credit-calculator/src/app/calcular-parcelas/calcular-parcelas.component.html
@@ -17,7 +17,7 @@
 	</form>
 
 	<div class="result">
-		<label>Valor com 5% de juros:</label>
+		<label>Valor total com 5% de juros:</label>
 		<input type="text" class="form-control result-input" [value]="totalAmount | currency: 'BRL'" disabled />
 	</div>
 </div>
